--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Content/Site.css
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Content/Site.css
@@ -23,5 +23,10 @@ textarea {
     max-width: 280px;
 }
 img {
-    width:50%;
+     width:460px; 
+     height:345px;
+}
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
 }
