--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_GalleriePhoto.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_GalleriePhoto.cshtml
@@ -3,12 +3,51 @@
 
 <h4>Photos</h4>
 
-@foreach (var photo in Model.Photos)
-{
-    <p>Photo @photo.PhotoId</p>
-    <img src="\images\photos\@photo.Chemin" />
-}
-@using(Html.BeginForm("Sommaire","Seances",new {id = Model.SeanceId},FormMethod.Post))
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <!--Splash screen-->
+        <div class="item active">
+            <img src="\images\slideshow.png" />
+        </div>
+    @if (Model.Photos.Count > 0)
+    {
+        foreach (var photo in Model.Photos)
+        {
+            <div class="item">
+                <img src="\images\photos\@photo.Chemin" />
+            </div>
+        }
+    }
+    else
+    {
+    <p>Photo non disponible pour le moment.</p>
+    }
+                
+        </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+@using (Html.BeginForm("Sommaire", "Seances", new { id = Model.SeanceId }, FormMethod.Post))
 {
     <input type="submit" value="Télécharger les photos" />
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/bootstrap")
 }
