--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -68,6 +68,7 @@
                     @Html.DisplayNameFor(model => model.First().PhotographeRDV)
                 </th>
                 <th></th>
+                <th></th>
             </tr>
 
             @foreach (var item in Model)
@@ -123,6 +124,10 @@
                         @Html.ActionLink("Détails", "Sommaire", new { id = item.SeanceId }) |
                         @Html.ActionLink("Supprimer", "Delete", new { id = item.SeanceId }) |
                         @Html.ActionLink("Extras", "Extra", new { id = item.SeanceId })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Confirmer RDV", "Confirmer", new { id = item.SeanceId }) |
+                        @Html.ActionLink("Facturer", "Facturer", new { id = item.SeanceId }) 
                     </td>
                 </tr>
             }
