--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Confirmer.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Confirmer.cshtml
@@ -56,10 +56,12 @@
 </dl>
 
 @{
-    using (Html.BeginForm("Confirmer", "Seances", new { id= Model.SeanceId }, FormMethod.Post)
+    using (Html.BeginForm("Confirmer", "Seances", new { id= Model.SeanceId }, FormMethod.Post))
     {
-        
+        <input type="submit" value="Confirmer le rendez-vous" />
     }
 }
+
+<br />
 
 @Html.ActionLink("Back to List", "Index")
