--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
     <h4>Propriete</h4>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProprieteId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.ProprieteId }) |
+    @Html.ActionLink("Retour à la liste", "Index")
 </p>
