--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Créer une nouvelle propriété", "Create")
 </p>
 <table class="table">
     <tr>
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.Ville)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProprieteId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProprieteId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProprieteId })
+            @Html.ActionLink("Modifier", "Edit", new { id=item.ProprieteId }) |
+            @Html.ActionLink("Détails", "Details", new { id=item.ProprieteId }) |
+            @Html.ActionLink("supprimer", "Delete", new { id=item.ProprieteId })
         </td>
     </tr>
 }
