--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Créer un nouveau forfait</h2>
 
 
 @using (Html.BeginForm()) 
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à la liste", "Index")
 </div>
 
 @section Scripts {
