--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/_RapportAgence.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/_RapportAgence.cshtml
@@ -6,7 +6,7 @@
     <h4>Rapport du mois de @date @annee</h4>
 }
 
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.First().Agent)
