--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Client)
@@ -23,23 +23,24 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Client)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Adresse)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ville)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProprieteId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProprieteId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProprieteId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Client)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Adresse)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Ville)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ProprieteId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ProprieteId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ProprieteId })
+            </td>
+        </tr>
+    }
 
 </table>
