--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoAgent.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoAgent.cshtml
@@ -2,7 +2,7 @@
 
 
 <h4>Information sur l'agent</h4>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nom)
