--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoForfait.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoForfait.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionPhotoImmobilier.ViewModels.SeanceRdv
 
 <h4>Forfait</h4>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Forfait)
