--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoPropriete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoPropriete.cshtml
@@ -2,7 +2,7 @@
 
 <h4>Propriété</h4>
 
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Adresse)
