--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Créer une nouvelle agence", "Create")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nom)
@@ -24,26 +24,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Adresse)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumTel)
-        </td>
-        <td>
-            @Html.ActionLink("Modifier", "Edit", new { id=item.AgenceId }) |
-            @Html.ActionLink("Détails", "Details", new { id=item.AgenceId }) |
-            @Html.ActionLink("Supprimer", "Delete", new { id=item.AgenceId })
-        </td>
-        <td>
-            @Html.ActionLink("Produire un rapport", "Rapport", new { id=item.AgenceId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nom)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Adresse)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumTel)
+            </td>
+            <td>
+                @Html.ActionLink("Modifier", "Edit", new { id = item.AgenceId }) |
+                @Html.ActionLink("Détails", "Details", new { id = item.AgenceId }) |
+                @Html.ActionLink("Supprimer", "Delete", new { id = item.AgenceId })
+            </td>
+            <td>
+                @Html.ActionLink("Produire un rapport", "Rapport", new { id = item.AgenceId })
+            </td>
+        </tr>
+    }
 
 </table>
