--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Ajouter un nouvel agent", "Create")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nom)
@@ -20,20 +20,21 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Agence.Nom)
-        </td>
-        <td>
-            @Html.ActionLink("Modifier", "Edit", new { id=item.AgentId }) |
-            @Html.ActionLink("Détails", "Details", new { id=item.AgentId }) |
-            @Html.ActionLink("Supprimer", "Delete", new { id=item.AgentId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nom)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Agence.Nom)
+            </td>
+            <td>
+                @Html.ActionLink("Modifier", "Edit", new { id = item.AgentId }) |
+                @Html.ActionLink("Détails", "Details", new { id = item.AgentId }) |
+                @Html.ActionLink("Supprimer", "Delete", new { id = item.AgentId })
+            </td>
+        </tr>
+    }
 
 </table>
