--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
@@ -10,7 +10,7 @@
 
     @Html.ActionLink("Créer un nouveau rendez-vous", "Create")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Confirmer)
@@ -24,34 +24,35 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    bool bonBool = (bool)item.Confirmer;
-    string boolFrancais = "";
-    if (bonBool == true)
+    @foreach (var item in Model)
     {
-        boolFrancais = "Oui";
+        bool bonBool = (bool)item.Confirmer;
+        string boolFrancais = "";
+        if (bonBool == true)
+        {
+            boolFrancais = "Oui";
+        }
+        else
+        {
+            boolFrancais = "Non";
+        }
+
+        <tr>
+            <td>
+                @boolFrancais
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Client)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Photographe)
+            </td>
+            <td>
+                @*@Html.ActionLink("Modifier", "Edit", new { id=item.RdvId }) |
+                    @Html.ActionLink("Détails", "Details", new { id=item.RdvId }) |*@
+                @Html.ActionLink("Supprimer", "Delete", new { id = item.RdvId })
+            </td>
+        </tr>
     }
-    else
-    {
-        boolFrancais = "Non";
-    }
-    
-    <tr>
-        <td>
-           @boolFrancais
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Client)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Photographe)
-        </td>
-        <td>
-            @*@Html.ActionLink("Modifier", "Edit", new { id=item.RdvId }) |
-            @Html.ActionLink("Détails", "Details", new { id=item.RdvId }) |*@
-            @Html.ActionLink("Supprimer", "Delete", new { id=item.RdvId })
-        </td>
-    </tr>
-}
 
 </table>
