--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_SeanceFuture.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_SeanceFuture.cshtml
@@ -6,7 +6,7 @@
 <p>
     @Html.ActionLink("Retour à la liste", "Index")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.First().DateSeance)
@@ -38,8 +38,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model)
-{
+    @foreach (var item in Model)
+    {
         bool bonBool = false;
 
         if (item.Confirmer != null)
@@ -91,7 +91,7 @@
                 @Html.ActionLink("Supprimer", "Delete", new { id = item.SeanceId })
             </td>
         </tr>
-}
+    }
 
 </table>
 
