--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
 
-    @Html.ActionLink("Créer un nouveau rendez-vous", "Create")
+    @Html.ActionLink("Créer un nouveau rendez-vous", "CreateSansInfos")
 </p>
 <table class="table table-striped">
     <tr>
